fix(coral): Fix scrollbars showing inappropriately in Modals (#905)
fix(coral): Fix scrollbars showing inappropriately

--- a/coral/src/app/components/Modal.module.css
+++ b/coral/src/app/components/Modal.module.css
@@ -7,6 +7,6 @@
 }
 
 .modalTextBlock {
-  overflow: scroll;
+  overflow: auto;
   max-height: 70vh;
 }
